Product Page buttons and logic fixes

--- a/assets/base.css
+++ b/assets/base.css
@@ -79,8 +79,9 @@
 /* base */
 
 * {
-  font-family: janna;
-  line-height: 1.5;
+  font-family: all-genders;
+  font-weight: 25;
+  line-height: 1.6;
 }
 
 
