Main font replaced
Replaced All-Genders with DIN

--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -57,22 +57,22 @@
 
     {% style %}
       @font-face {
-                  font-family: 'all-genders';
-                  src: url('{{ "all-genders-light.otf" | asset_url }}') format('opentype');
+                  font-family: 'DIN';
+                  src: url('{{ "DIN_light.ttf" | asset_url }}') format('truetype');
                   font-weight: 25;
                   font-style: normal;
                   font-display: swap;
                 }
       @font-face {
-                  font-family: 'all-genders';
-                  src: url('{{ "all-genders-regular.otf" | asset_url }}') format('opentype');
+                  font-family: 'DIN';
+                  src: url('{{ "DIN_regular.ttf" | asset_url }}') format('truetype');
                   font-weight: 50;
                   font-style: normal;
                   font-display: swap;
                 }
       @font-face {
-                  font-family: 'all-genders';
-                  src: url('{{ "all-genders-bold.otf" | asset_url }}') format('opentype');
+                  font-family: 'DIN';
+                  src: url('{{ "DIN_bold.ttf" | asset_url }}') format('truetype');
                   font-weight: 100;
                   font-style: normal;
                   font-display: swap;
