--- a/assets/base.css
+++ b/assets/base.css
@@ -79,7 +79,7 @@
 /* base */
 
 * {
-  font-family: DIN sans-serif;
+  font-family: DIN;
   font-weight: 25;
   line-height: 1.6;
 }
@@ -266,7 +266,7 @@ body:has(.section-header .drawer-menu) .announcement-bar-section .page-width {
   font-size: 1.5rem;
   letter-spacing: 0.06rem;
   line-height: calc(1 + 0.8 / var(--font-body-scale));
-  font-family: DIN sans-serif;
+  font-family: DIN;
   font-style: var(--font-body-style);
   font-weight: var(--font-body-weight);
 }
@@ -282,7 +282,7 @@ h5,
 .h3,
 .h4,
 .h5 {
-  font-family: DIN sans-serif;
+  font-family: DIN;
   font-style: var(--font-heading-style);
   font-weight: var(--font-heading-weight);
   letter-spacing: calc(var(--font-heading-scale) * 0.06rem);
@@ -1489,7 +1489,7 @@ details[open] > .share-button__fallback {
   appearance: none;
   background-color: rgb(var(--color-background));
   color: rgb(var(--color-foreground));
-  font-family: DIN sans-serif;
+  font-family: DIN;
   font-style: var(--font-body-style);
   font-weight: var(--font-body-weight);
   font-size: 1.6rem;
@@ -1542,7 +1542,7 @@ details[open] > .share-button__fallback {
 }
 
 .select__select {
-  font-family: DIN sans-serif;
+  font-family: DIN;
   font-style: var(--font-body-style);
   font-weight: var(--font-body-weight);
   font-size: 1.2rem;
@@ -1717,7 +1717,7 @@ details[open] > .share-button__fallback {
 /* Text area */
 
 .text-area {
-  font-family: DIN sans-serif;
+  font-family: DIN;
   font-style: var(--font-body-style);
   font-weight: var(--font-body-weight);
   min-height: 10rem;
@@ -1833,7 +1833,7 @@ input[type='checkbox'] {
 
 .quantity__input {
   color: currentColor;
-  font-family: DIN sans-serif;
+  font-family: DIN;
   font-style: var(--font-body-style);
   font-weight: var(--font-body-weight);
   font-size: 1.6rem;
