--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -57,26 +57,60 @@
 
     {% style %}
       @font-face {
-                  font-family: 'DIN';
-                  src: url('{{ "DIN_light.ttf" | asset_url }}') format('truetype');
-                  font-weight: 300;
-                  font-style: normal;
-                  font-display: swap;
-                }
+        font-family: 'DIN';
+        src: url('{{ "DIN_ultraLight.ttf" | asset_url }}') format('truetype');
+        font-weight: 100;
+        font-style: normal;
+        font-display: swap;
+      }
+
       @font-face {
-                  font-family: 'DIN';
-                  src: url('{{ "DIN_regular.ttf" | asset_url }}') format('truetype');
-                  font-weight: 400;
-                  font-style: normal;
-                  font-display: swap;
-                }
+        font-family: 'DIN';
+        src: url('{{ "DIN_light.ttf" | asset_url }}') format('truetype');
+        font-weight: 300;
+        font-style: normal;
+        font-display: swap;
+      }
+
       @font-face {
-                  font-family: 'DIN';
-                  src: url('{{ "DIN_bold.ttf" | asset_url }}') format('truetype');
-                  font-weight: 700;
-                  font-style: normal;
-                  font-display: swap;
-                }
+        font-family: 'DIN';
+        src: url('{{ "DIN_regular.ttf" | asset_url }}') format('truetype');
+        font-weight: 400;
+        font-style: normal;
+        font-display: swap;
+      }
+
+      @font-face {
+        font-family: 'DIN';
+        src: url('{{ "DIN_medium.ttf" | asset_url }}') format('truetype');
+        font-weight: 500;
+        font-style: normal;
+        font-display: swap;
+      }
+
+      @font-face {
+        font-family: 'DIN';
+        src: url('{{ "DIN_bold.ttf" | asset_url }}') format('truetype');
+        font-weight: 700;
+        font-style: normal;
+        font-display: swap;
+      }
+
+      @font-face {
+        font-family: 'DIN';
+        src: url('{{ "DIN_heavy.ttf" | asset_url }}') format('truetype');
+        font-weight: 800;
+        font-style: normal;
+        font-display: swap;
+      }
+
+      @font-face {
+        font-family: 'DIN';
+        src: url('{{ "DIN_black.ttf" | asset_url }}') format('truetype');
+        font-weight: 900;
+        font-style: normal;
+        font-display: swap;
+      }
       
       {{ settings.type_body_font | font_face: font_display: 'swap' }}
       {{ body_font_bold | font_face: font_display: 'swap' }}
