--- a/assets/product_page.css
+++ b/assets/product_page.css
@@ -13,7 +13,6 @@
   justify-content: center;
   align-items: center;
   gap: 75px;
-  padding: 100px 0px;
 }
 
 
@@ -37,15 +36,16 @@
 
 .short_title {
   color: white;
-  font-size: clamp(40px, 5.2vw, 80px);
-  font-family: all-genders;
-  font-weight: 100;
+  font-size: 4.3dvw;
+  font-family: "DIN";
+  font-weight: 500;
 }
 
 .normal_title {
   font-size: 20px;
-  font-weight: 25;
-  margin-top: 20px;
+  font-weight: 400;
+  margin-top: 15px;
+  
 }
 
 .product_description {
@@ -129,6 +129,7 @@ button {
   border-radius: 9999px;
   border: none;
   font-size: 16px;
+  font-weight: 500;
   background-color: #ffffff;
   color: black;
   transition: background-color 0.2s ease;
@@ -142,7 +143,6 @@ button {
   border: 2px solid #ffffff;
   border-radius: 9999px;
   padding: 5px 10px;
-  gap: 10px;
 }
 
 /* + / − Buttons */
@@ -175,6 +175,20 @@ button {
   margin: 0;
 }
 
+
+/* Favorate Widget */
+
+.st-wishlist-button.st-initialized {
+  background-color: white !important;
+  color: black !important;
+  padding: 0px 10px !important;
+}
+.st-wishlist-icon {
+  color: black !important;
+}
+.st-label {
+  font-weight: 500;
+}
 
 /* Responsive Styles */
 
