--- a/sections/product-1.liquid
+++ b/sections/product-1.liquid
@@ -99,9 +99,11 @@
           <button type="submit" name="add" class="buy-now-button" formaction="/checkout">
             الشراء الآن
           </button>
+
+          <!-- Fav Button -->
+           <button class="st-wishlist-button" data-type="details" data-handle="{{ product.handle }}"></button>
         </form>
 
-        <button class="st-wishlist-button" data-type="details" data-handle="{{ product.handle }}"></button>
       </div>
 
     </div>
