--- a/assets/custom-banner.css
+++ b/assets/custom-banner.css
@@ -67,20 +67,19 @@ div.swiper-wrapper {
   margin: 0px;
   font-size: 40px;
   text-align: center;
-  font-weight: bold;
-  color: #083135;
+  font-weight: 600;
   padding-bottom: 10px;
 }
 
 .banner-description {
   padding: 0px;
   margin: 0px;
-  font-size: 16px;
+  font-size: 20px;
+  font-weight: 400;
   text-align: center;
-  color: #083135;
   width: 40%;
   padding-bottom: 10px;
-  font-weight: bold;
+  opacity: .9;
 }
 
 .button-wrapper {
@@ -162,7 +161,7 @@ div.swiper-wrapper {
   .image_banner img {
     width: 100%;
     height: 100%;
-    border-radius: 20px;
+    border-radius: 10px;
   }
 
 
@@ -170,8 +169,7 @@ div.swiper-wrapper {
 
 
 @media (min-width: 768px) {
-
-  .banner-container {
+      .banner-container {
     padding: 20px 0px;
   }
 
@@ -182,7 +180,7 @@ div.swiper-wrapper {
 
   .image_banner img {
     width: 100%;
-    border-radius: 20px;
+    border-radius: 10px;
   }
 
   .mug-image {
@@ -192,6 +190,7 @@ div.swiper-wrapper {
   }
 
   .banner-description {
-    font-size: 15px;
+    font-size: 20px;
   }
+
 }
