--- a/assets/custom-banner.css
+++ b/assets/custom-banner.css
@@ -44,6 +44,15 @@ div.swiper-wrapper {
   object-fit: cover;
 }
 
+.image_banner::before {
+  position: absolute;
+  content: "";
+  z-index: 1;
+  width: 100%;
+  height: 100%;
+  background: linear-gradient(0deg,rgba(0, 0, 0, 0.8) 0%, rgba(255, 255, 255, 0) 50%);
+}
+
 .image_banner img {
   border-radius: 40px;
   height: 100%;
@@ -60,6 +69,7 @@ div.swiper-wrapper {
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  z-index: 2;
 }
 
 .banner-title {
