--- a/assets/custom-banner.css
+++ b/assets/custom-banner.css
@@ -50,7 +50,8 @@ div.swiper-wrapper {
   z-index: 1;
   width: 100%;
   height: 100%;
-  background: linear-gradient(0deg,rgba(0, 0, 0, 0.6) 5%, rgba(0, 0, 0, 0) 40%);
+  background: linear-gradient(0deg,rgba(0, 0, 0, 0.8) 0%, rgba(0, 0, 0, 0) 50%);
+  border-radius: 10px;
 }
 
 .image_banner img {
@@ -58,6 +59,7 @@ div.swiper-wrapper {
   height: 100%;
   width: 100%;
   object-fit: cover;
+  overflow: hidden;
 }
 
 .banner-text {
