--- a/assets/custom-banner.css
+++ b/assets/custom-banner.css
@@ -50,7 +50,7 @@ div.swiper-wrapper {
   z-index: 1;
   width: 100%;
   height: 100%;
-  background: linear-gradient(0deg,rgba(0, 0, 0, 0.8) 0%, rgba(0, 0, 0, 0) 50%);
+  background: linear-gradient(0deg,rgb(0, 0, 0, 1) -15%, rgba(0, 0, 0, 0) 40%);
   border-radius: 10px;
 }
 
@@ -66,7 +66,7 @@ div.swiper-wrapper {
   text-align: center;
   width: 100%;
   position: absolute;
-  bottom: 8%;
+  bottom: 10%;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -105,7 +105,7 @@ div.swiper-wrapper {
   background-color: #f7995f;
   color: #083135;
   font-weight: bolder;
-  padding: 0px 45px;
+  padding: 0px 60px;
   border-radius: 30px;
   font-size: 24px;
   font-weight: 700;
@@ -176,12 +176,11 @@ div.swiper-wrapper {
     border-radius: 10px;
   }
 
-
 }
 
 
 @media (min-width: 768px) {
-      .banner-container {
+  .banner-container {
     padding: 20px 0px;
   }
 
@@ -201,8 +200,18 @@ div.swiper-wrapper {
     margin-bottom: 0;
   }
 
+  .banner-title {
+    padding-bottom: 2px;
+  }
+
   .banner-description {
     font-size: 20px;
+    padding-bottom: 18px;
+  }
+
+  .banner-button {
+    line-height: 1.5;
+    padding-bottom: 4px;
   }
 
 }
